--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "0000_Pagina_web_Github"
+title: "Eines de l'Institut Metròpoli"
 ---
 
 This is a Quarto website.
@@ -9,3 +9,5 @@ To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 ```{r}
 1 + 1
 ```
+
+
